--- a/docker/Dockerfile_apache
+++ b/docker/Dockerfile_apache
@@ -5,6 +5,7 @@ ARG _DOMAIN
 ARG _TIME_ZONE
 ARG _LANG
 ARG _PATH_ROOT
+ARG _CERTIFICATE_LABEL
 ARG _APACHE_SERVER_PORT
 
 ENV ENV_NAME=${_ENV_NAME}
@@ -12,12 +13,14 @@ ENV DOMAIN=${_DOMAIN}
 ENV TZ=${_TIME_ZONE}
 ENV LANG=${_LANG}
 ENV PATH_ROOT=${_PATH_ROOT}
+ENV CERTIFICATE_LABEL=${_CERTIFICATE_LABEL}
 ENV APACHE_SERVER_PORT=${_APACHE_SERVER_PORT}
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
 ENV SUDO_FORCE_REMOVE=yes
 
+COPY ./.ms_cronjob-volume/certificate/* /usr/local/share/ca-certificates/
 COPY ./certificate/* /usr/local/share/ca-certificates/
 COPY ./docker/NotoSansJP-Regular.ttf /usr/share/fonts/truetype/noto/
 COPY ./docker/NotoSansSymbols2-Regular.ttf /usr/share/fonts/truetype/noto/
@@ -38,7 +41,7 @@ RUN cd ~ \
     && ln -sf /usr/share/zoneinfo/${TZ} /etc/localtime && echo ${TZ} > /etc/timezone \
     && echo "application/typescript ts" >> /etc/mime.types \
     # Httpd
-    && envsubst '${PATH_ROOT},${APACHE_SERVER_PORT}' < /usr/local/apache2/conf/httpd.conf.template > /usr/local/apache2/conf/httpd.conf \
+    && envsubst '${PATH_ROOT},${CERTIFICATE_LABEL},${APACHE_SERVER_PORT}' < /usr/local/apache2/conf/httpd.conf.template > /usr/local/apache2/conf/httpd.conf \
     # Clean
     && apt-get remove --purge -y sudo \
     && rm -rf /var/lib/apt/lists/* \
