--- a/env/local.env
+++ b/env/local.env
@@ -6,6 +6,8 @@ DOMAIN='localhost'
 TIME_ZONE='Asia/Tokyo'
 LANG='C.UTF-8'
 PATH_ROOT='/home/app/'
+
+CERTIFICATE_LABEL='tls'
 PATH_FILE='file/'
 PATH_LOG='log/'
 PATH_SCRIPT='script/'
