--- a/docker-compose-cpu.yaml
+++ b/docker-compose-cpu.yaml
@@ -22,7 +22,7 @@ services:
       - "host.docker.internal:host-gateway"
     volumes:
       - ./:${PATH_ROOT}
-      - ms_cronjob-volume:${PATH_ROOT}.ms_cronjob-volume/:ro
+      - ms_cronjob-volume:${PATH_ROOT}certificate/:ro
       - /var/run/docker.sock:/var/run/docker.sock
       - /run/dbus/system_bus_socket:/run/dbus/system_bus_socket
       - /mnt/wslg:/mnt/wslg
@@ -47,7 +47,7 @@ services:
       - "host.docker.internal:host-gateway"
     volumes:
       - ./:${PATH_ROOT}
-      - ms_cronjob-volume:${PATH_ROOT}.ms_cronjob-volume/:ro
+      - ms_cronjob-volume:${PATH_ROOT}certificate/:ro
       - /var/run/docker.sock:/var/run/docker.sock
       - /run/dbus/system_bus_socket:/run/dbus/system_bus_socket
       - /mnt/wslg:/mnt/wslg
@@ -74,7 +74,7 @@ services:
       - "host.docker.internal:host-gateway"
     volumes:
       - ./:${PATH_ROOT}
-      - ms_cronjob-volume:${PATH_ROOT}.ms_cronjob-volume/:ro
+      - ms_cronjob-volume:${PATH_ROOT}certificate/:ro
       - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - cimo_ow_nodejs_cpu
