--- a/env/local.env
+++ b/env/local.env
@@ -7,7 +7,7 @@ TIME_ZONE='Asia/Tokyo'
 LANG='C.UTF-8'
 PATH_ROOT='/home/app/'
 
-CERTIFICATE_LABEL='tls'
+CERTIFICATE_LABEL=''
 PATH_FILE='file/'
 PATH_LOG='log/'
 PATH_SCRIPT='script/'
