--- a/docker-compose-cpu.yaml
+++ b/docker-compose-cpu.yaml
@@ -12,6 +12,7 @@ services:
         _TIME_ZONE: ${TIME_ZONE}
         _LANG: ${LANG}
         _PATH_ROOT: ${PATH_ROOT}
+        _PATH_CERTIFICATE_PEM: ${PATH_CERTIFICATE_PEM}
         _NODEJS_SERVER_PORT: ${NODEJS_SERVER_PORT}
         _NODEJS_SERVER_PORT_RANGE: ${NODEJS_SERVER_PORT_RANGE}
     ports:
