--- a/env/local.env
+++ b/env/local.env
@@ -7,6 +7,9 @@ TIME_ZONE='Asia/Tokyo'
 LANG='C.UTF-8'
 PATH_ROOT='/home/app/'
 
+PATH_CERTIFICATE_KEY='/usr/local/share/ca-certificates/tls.key'
+PATH_CERTIFICATE_CRT='/usr/local/share/ca-certificates/tls.crt'
+PATH_CERTIFICATE_PEM='/usr/local/share/ca-certificates/ca.pem'
 PATH_FILE='file/'
 PATH_LOG='log/'
 PATH_SCRIPT='script/'
